--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ASIAZXNR5YNCB7ZO4GFA
-          aws-secret-access-key: fvOL253kHMmGCKfAGPvf+qbSip7vfdkrXGp9lTxz
-          aws-region: us-east-1  # update if needed
-
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          
       - name: Download JAR from S3
         run: |
           mkdir deploy
